envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901

node:
  # The cluster name is used by Zipkin to identify the proxy.
  cluster: app-gateway

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              cors:
                allow_origin_string_match:
                  - safe_regex:
                      google_re2: {}
                      regex: \*
                allow_methods: "*"
                allow_headers: "*"              
              routes:
              - match:
                  prefix: "/security"
                route:
                  prefix_rewrite: "/api/auth/getToken"
                  cluster: security_cluster
                decorator:
                  operation: checkAvailability
              - match:
                  prefix: "/invoice"
                route:
                  prefix_rewrite: "/api/invoice"
                  cluster: invoice_cluster
              - match:
                  prefix: "/pay"
                route:
                  prefix_rewrite: "/api/pay"
                  cluster: pay_cluster
              - match:
                  prefix: "/transaction"
                route:
                  prefix_rewrite: "/api/transaction"
                  cluster: transaction_cluster
              response_headers_to_add:
              - header:
                  key: "x-b3-traceid"
                  value: "%REQ(x-b3-traceid)%"
              - header:
                  key: "x-request-id"
                  value: "%REQ(x-request-id)%"
          http_filters:
            - name: envoy.filters.http.cors
              typed_config:
            - name: envoy.filters.http.jwt_authn 
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication 
                providers:
                  jwt_provider:
                    local_jwks:
                      inline_string: '{"keys":[{"typ": "JWT", "kty":"oct","alg":"HS256","kid":"df","k":"S2V5U2VjcmV0IzEyM0Fmb3JvMjU1IzI1NSNOb2RlSlNNaWNybw=="}]}' #https://www.base64encode.org/  ->  ENCODE ->   KeySecret#123Aforo255#255#NodeJSMicro
                rules:
                  - match:
                      prefix: /invoice
                    requires:
                      provider_name: jwt_provider
                  - match:
                      prefix: /pay
                    requires:
                      provider_name: jwt_provider
                  - match:
                      prefix: /transaction
                    requires:
                      provider_name: jwt_provider
            - name: envoy.filters.http.router
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: security_cluster
    connect_timeout: 60s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: security_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: app-security
                port_value: 80
  - name: invoice_cluster
    connect_timeout: 60s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: invoice_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: app-invoice
                port_value: 80
  - name: pay_cluster
    connect_timeout: 60s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: pay_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: app-pay
                port_value: 80
  - name: transaction_cluster
    connect_timeout: 60s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: transaction_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: app-transaction
                port_value: 80
